--- a/Bitácora.html
+++ b/Bitácora.html
@@ -53,8 +53,12 @@
 							<h1>Bitácora</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>Acá registraré el progreso de mis clases.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1>Sesión 3</h1>
+							<p>En la sesión 3, exploramos GitHub y Visual Studio Code. Descubrimos cómo Visual Studio Code facilita el desarrollo colaborativo con sus extensiones y su integración con Git. También aprendimos a utilizar GitHub para gestionar repositorios, ramas y solicitudes de extracción, lo que nos permite colaborar de manera efectiva en proyectos de software.</p>
+							<h1>Sesión 4</h1>
+							<p>En la sesión 4, adquirimos habilidades de programación utilizando una plantilla como base. Exploramos cómo esta plantilla nos proporciona una estructura inicial para nuestros proyectos, facilitando el proceso de desarrollo al brindarnos un punto de partida sólido. Aprendimos a personalizar y expandir esta plantilla según nuestras necesidades específicas, lo que nos permite crear aplicaciones más eficientes y robustas.</p>
+							<h1>Sesión 5</h1>
+							<p>En la sesión 5, pusimos en práctica nuestras habilidades de programación al desarrollar y presentar nuestra página web. Utilizando los conocimientos adquiridos previamente, creamos una página web desde cero, aplicando HTML, CSS y posiblemente JavaScript para dar vida a nuestro diseño. Durante la presentación, compartimos nuestro trabajo con el grupo, destacando los aspectos clave del diseño, la funcionalidad y las decisiones de desarrollo. Esta experiencia no solo nos permitió aplicar lo aprendido, sino también mejorar nuestras habilidades de comunicación y recibir retroalimentación constructiva de nuestros compañeros.</p>
 						</div>
 					</div>
 
