--- a/Bitácora.html
+++ b/Bitácora.html
@@ -53,12 +53,15 @@
 							<h1>Bitácora</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>Acá registraré el progreso de mis clases.</p>
+							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<h1>Sesión 3</h1>
 							<p>En la sesión 3, exploramos GitHub y Visual Studio Code. Descubrimos cómo Visual Studio Code facilita el desarrollo colaborativo con sus extensiones y su integración con Git. También aprendimos a utilizar GitHub para gestionar repositorios, ramas y solicitudes de extracción, lo que nos permite colaborar de manera efectiva en proyectos de software.</p>
 							<h1>Sesión 4</h1>
 							<p>En la sesión 4, adquirimos habilidades de programación utilizando una plantilla como base. Exploramos cómo esta plantilla nos proporciona una estructura inicial para nuestros proyectos, facilitando el proceso de desarrollo al brindarnos un punto de partida sólido. Aprendimos a personalizar y expandir esta plantilla según nuestras necesidades específicas, lo que nos permite crear aplicaciones más eficientes y robustas.</p>
 							<h1>Sesión 5</h1>
 							<p>En la sesión 5, pusimos en práctica nuestras habilidades de programación al desarrollar y presentar nuestra página web. Utilizando los conocimientos adquiridos previamente, creamos una página web desde cero, aplicando HTML, CSS y posiblemente JavaScript para dar vida a nuestro diseño. Durante la presentación, compartimos nuestro trabajo con el grupo, destacando los aspectos clave del diseño, la funcionalidad y las decisiones de desarrollo. Esta experiencia no solo nos permitió aplicar lo aprendido, sino también mejorar nuestras habilidades de comunicación y recibir retroalimentación constructiva de nuestros compañeros.</p>
+							<h1>Sesión 6</h1>
+							<p>En la sesión 6, presentamos nuestra solución para abordar la problemática del abuso sexual en colegios. Tras un intenso trabajo grupal, desarrollamos un enfoque integral que incluye medidas de prevención, detección temprana y apoyo a las víctimas. Nuestra solución se basa en la educación sobre el consentimiento y la sexualidad responsable, la implementación de políticas de protección y protocolos de acción claros, así como la creación de espacios seguros para que los estudiantes puedan expresar sus preocupaciones de manera confidencial. Durante la presentación, destacamos la importancia de la colaboración entre estudiantes, personal escolar, familias y comunidades para abordar esta problemática de manera efectiva y crear un entorno escolar seguro y respetuoso para todos.</p>
 						</div>
 					</div>
 
