--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<header>
 								<h1>¡Hola! Bienvenidosss.<br />
 								Acá pueden conocer más de mi  <a href="sobremi.html">Renzo La Serna</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>¡¡En esta página web encontrarán muchas cosas mías!!.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
