--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<div class="inner">
 							<header>
 								<h1>¡Hola! Bienvenidosss.<br />
-								Acá pueden conocer más de mi  <a href="sobremi.html">Renzo La Serna</a>.</h1>
+								Acá pueden conocer más de mí,   <a href="sobremi.html">Renzo La Serna</a>.</h1>
 								<p>¡¡En esta página web encontrarán muchas cosas mías!!.</p>
 							</header>
 							<section class="tiles">
