--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<header>
 								<h1>¡Hola! Bienvenidosss.<br />
 								Acá pueden conocer más de mí,   <a href="sobremi.html">Renzo La Serna</a>.</h1>
-								<p>¡¡En esta página web encontrarán muchas cosas mías!!.</p>
+								<p>Mi nombre es Renzo La Serna y esta es mi página web, acá encontrarán proyectos y más.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
