--- a/Contacto.html
+++ b/Contacto.html
@@ -52,9 +52,11 @@
 						<div class="inner">
 							<h1>Contacto</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Hola, mi nombre es Virgilio y soy su profesor del curso Laboratorio de Innovación 2 .</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Si te gustaría contactarme aquí te dejo todos los medios por los que podrás hacerlo.</p>
+							<p>Si estás buscando un profesional con cierta experiencia en el ámbito del diseño y a trabajar bajo presión, no dudes en contactarme. Siempre estoy dispuesto a aportar mi grano de arena para sacar adelante cada proyecto, aplicando mi experiencia y conocimientos para lograr el objetivo.</p>
+							<p>¡Estoy comprometido a colaborar contigo en lo medida de lo posible para ayudarte a alcanzar tus objetivos!</p>
+							<p>Correo: rlasernabocanegra3@gmail.com </p>
+							<p>Número de teléfono: +51 962 082 132</p>
 						</div>
 					</div>
 
