--- a/sobremi.html
+++ b/sobremi.html
@@ -51,10 +51,11 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Sobre mi</h1>
-							<span class="image main"><img src="images/yo.png" alt="" /></span>
+							<span class="image main"><img src="yoconpredator.png" alt="" /></span>
 							<p>Hola, mi nombre es Renzo y alumno del curso Laboratorio de Innovación 2 .</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>SOBRE MÍ
+							<p>¡Hola! Soy Renzo La Serna y tengo 20 años. Actualmente estoy curso el séptimo ciclo de la carrera Dirección y Diseño Gráfico en la escuela superior Toulouse Lautrec. Actualmente me desempeño como ingeniero de empaques en una empresa de la industria gráfica que se dedica a los embalajes de papel y cartón.</p>
+							<p>Me considero una persona bastante creativa y habilidosa además de dispuesta y comprometida. Me encanta aprender y siempre estoy listo para nuevos retos..</p>
 						</div>
 					</div>
 
