--- a/Contacto.html
+++ b/Contacto.html
@@ -51,7 +51,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Contacto</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="contacto.jpg" alt="" /></span>
 							<p>Si te gustaría contactarme aquí te dejo todos los medios por los que podrás hacerlo.</p>
 							<p>Si estás buscando un profesional con cierta experiencia en el ámbito del diseño y a trabajar bajo presión, no dudes en contactarme. Siempre estoy dispuesto a aportar mi grano de arena para sacar adelante cada proyecto, aplicando mi experiencia y conocimientos para lograr el objetivo.</p>
 							<p>¡Estoy comprometido a colaborar contigo en lo medida de lo posible para ayudarte a alcanzar tus objetivos!</p>
