--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Magna</h2>
+										<h2>Sobre mí</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Información sobre mí.</p>
 										</div>
 									</a>
 								</article>
