--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="https://sites.google.com/view/sensidoll/inicio">
+										<h2>Proyecto grupal</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Aquí se verá el proyecto "Sensidoll".</p>
 										</div>
 									</a>
 								</article>
