--- a/Bitácora.html
+++ b/Bitácora.html
@@ -65,7 +65,7 @@
 							<h1>Sesión 6</h1>
 							<p>En la sesión 6, presentamos nuestra solución para abordar la problemática del abuso sexual en colegios. Tras un intenso trabajo grupal, desarrollamos un enfoque integral que incluye medidas de prevención, detección temprana y apoyo a las víctimas. Nuestra solución se basa en la educación sobre el consentimiento y la sexualidad responsable, la implementación de políticas de protección y protocolos de acción claros, así como la creación de espacios seguros para que los estudiantes puedan expresar sus preocupaciones de manera confidencial. Durante la presentación, destacamos la importancia de la colaboración entre estudiantes, personal escolar, familias y comunidades para abordar esta problemática de manera efectiva y crear un entorno escolar seguro y respetuoso para todos.</p>
 							<h1>Sesión 7</h1>
-							<p>En la sesión 7, exploramos GitHub y Visual Studio Code. Descubrimos cómo Visual Studio Code facilita el desarrollo colaborativo con sus extensiones y su integración con Git. También aprendimos a utilizar GitHub para gestionar repositorios, ramas y solicitudes de extracción, lo que nos permite colaborar de manera efectiva en proyectos de software.</p>
+							<p>En la sesión 7, Nos introdujimos al uso de OnShape, una herramienta para el modelado 3D. Fue una experiencia desafiante para nosotros, especialmente para mí, ya que era mi primer contacto con ese software y me resultó casi indescifrable.</p>
 							<span class="image main"><img src="images/onshape.png" alt="" /></span>
 						</div>
 					</div>
