--- a/Bitácora.html
+++ b/Bitácora.html
@@ -67,6 +67,12 @@
 							<h1>Sesión 7</h1>
 							<p>En la sesión 7, Nos introdujimos al uso de OnShape, una herramienta para el modelado 3D. Fue una experiencia desafiante para nosotros, especialmente para mí, ya que era mi primer contacto con ese software y me resultó casi indescifrable.</p>
 							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<h1>Sesión 8</h1>
+							<p>En la sesión 8, Nos dedicamos a hacer un repaso del modelado 3d utilizando OneShape, como había mencionado antes, resulto super difícil por ser algo nuevo, por lo que fue necesario reforzar conocimientos.</p>
+							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<h1>Sesión 9</h1>
+							<p>En la sesión 9, Nos dedicamos ahora sí a enfocarnos a fondo en nuestro proyecto grupal, el Sensidoll, teniendo en cuenta mas las funciones a cumplir y como sería físicamente, realizamos bocetos e investigamos tecnologías a aplicar.</p>
+							<span class="image main"><img src="images/onshape.png" alt="" /></span>
 						</div>
 					</div>
 
