--- a/Bitácora.html
+++ b/Bitácora.html
@@ -72,13 +72,13 @@
 							<span class="image main"><img src="images/onshape.png" alt="" /></span>
 							<h1>Sesión 9</h1>
 							<p>En la sesión 9, Nos dedicamos ahora sí a enfocarnos a fondo en nuestro proyecto grupal, el Sensidoll, teniendo en cuenta mas las funciones a cumplir y como sería físicamente, realizamos bocetos e investigamos tecnologías a aplicar.</p>
-							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<span class="image main"><img src="" alt="" /></span>
 							<h1>Sesión 10</h1>
 							<p>En la sesión 10, presentamos nuestras ideas sobre el proyecto, bocetos, la lista de funciones, las tecnologías que usaríamos, definimos el usuario mediante el Customer Journey Map.</p>
 							<span class="image main"><img src="images/onshape.png" alt="" /></span>
 							<h1>Sesión 11</h1>
 							<p>En la sesión 11, Dejamos un poco de lado el Sensidoll y aprendimos sobre Arduino, funcionamiento de circuitos y tecnologías para utilizar y hacer nuestro proyecto realmente funcional, además aprendimos sobre inputs y outputs.</p>
-							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<span class="image main"><img src="images/arduinex.jpg" alt="" /></span>
 							<h1>Sesión 12</h1>
 							<p>En la sesión 12, Presentamos un prototipo, muy sencillo, físico que indicaba a groso modo el funcionamiento y simulamos la experiencia ofrecida por el mismo.</p>
 							<span class="image main"><img src="images/onshape.png" alt="" /></span>
