--- a/Bitácora.html
+++ b/Bitácora.html
@@ -72,28 +72,28 @@
 							<span class="image main"><img src="images/onshape.png" alt="" /></span>
 							<h1>Sesión 9</h1>
 							<p>En la sesión 9, Nos dedicamos ahora sí a enfocarnos a fondo en nuestro proyecto grupal, el Sensidoll, teniendo en cuenta mas las funciones a cumplir y como sería físicamente, realizamos bocetos e investigamos tecnologías a aplicar.</p>
-							<span class="image main"><img src="" alt="" /></span>
+							<span class="image main"><img src="equipex.jpg" alt="" /></span>
 							<h1>Sesión 10</h1>
 							<p>En la sesión 10, presentamos nuestras ideas sobre el proyecto, bocetos, la lista de funciones, las tecnologías que usaríamos, definimos el usuario mediante el Customer Journey Map.</p>
-							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<span class="image main"><img src="bocetos.jpg" alt="" /></span>
 							<h1>Sesión 11</h1>
 							<p>En la sesión 11, Dejamos un poco de lado el Sensidoll y aprendimos sobre Arduino, funcionamiento de circuitos y tecnologías para utilizar y hacer nuestro proyecto realmente funcional, además aprendimos sobre inputs y outputs.</p>
 							<span class="image main"><img src="images/arduinex.jpg" alt="" /></span>
 							<h1>Sesión 12</h1>
 							<p>En la sesión 12, Presentamos un prototipo, muy sencillo, físico que indicaba a groso modo el funcionamiento y simulamos la experiencia ofrecida por el mismo.</p>
-							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<span class="image main"><img src="prototipo.jpg" alt="" /></span>
 							<h1>Sesión 13</h1>
 							<p>En la sesión 13, presentamos nuestro proyecto de una forma algo más detallada, con tecnologías más especificadas, lista de funciones, inputs y outputs, además de un diagrama de flujo con los escenarios y cambios propios de las reacciones de nuestro Sensidoll. </p>
-							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<span class="image main"><img src="avance.jpg" alt="" /></span>
 							<h1>Sesión 14</h1>
 							<p>En la sesión 14, seguimos mostrando avances de nuestro proyecto, reemplazamos ciertas cosas para hacerlo menos costoso y más asequible, seguimos recomendaciones del profesor y lo encaminamos aún más para lograr realizarlo.</p>
-							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<span class="image main"><img src="presupuesto.jpg" alt="" /></span>
 							<h1>Sesión 15</h1>
 							<p>En la sesión 15, seguimos mostrando avances de nuestro proyecto, definimos ahora sí el circuito final, especificamos el funcionamiento (lista de funciones) y nos enfocamos en costos para tener una idea clara de cuánto nos costaría la realización de este proyecto.</p>
-							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<span class="image main"><img src="circuito.jpg" alt="" /></span>
 							<h1>Sesión 16</h1>
 							<p>En la sesión 16, presentamos finalmente nuestro proyecto en la exposición final de promedio 2.</p>
-							<span class="image main"><img src="images/onshape.png" alt="" /></span>
+							<span class="image main"><img src="expo.png" alt="" /></span>
 						</div>
 					</div>
 
