--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="sobremi.html">
 										<h2>Sobre mí</h2>
 										<div class="content">
 											<p>Información sobre mí.</p>
@@ -81,9 +81,9 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="contacto.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Contacto.html">
 										<h2>Feugiat</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
