--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="sensidollex.png" alt="" />
 									</span>
 									<a href="https://sites.google.com/view/sensidoll/inicio">
 										<h2>Proyecto grupal</h2>
