--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<a href="Contacto.html">
 										<h2>Feugiat</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Aquí podrás ver cómo contactarme</p>
 										</div>
 									</a>
 								</article>
