--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="yofotex.png" alt="" />
 									</span>
 									<a href="sobremi.html">
 										<h2>Sobre mí</h2>
@@ -81,7 +81,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="contacto.jpg" alt="" />
+										<img src="contactex.png" alt="" />
 									</span>
 									<a href="Contacto.html">
 										<h2>Feugiat</h2>
