--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<img src="contactex.png" alt="" />
 									</span>
 									<a href="Contacto.html">
-										<h2>Feugiat</h2>
+										<h2>Contacto</h2>
 										<div class="content">
 											<p>Aquí podrás ver cómo contactarme</p>
 										</div>
