--- a/Proyectos.html
+++ b/Proyectos.html
@@ -53,7 +53,7 @@
 							<h1>Proyectos</h1>
 							<span class="image main"><img src="melenareal.png" alt="" /></span>
 							<p>Creación de concepto, diseño y producto.</p>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="retoquex.png" alt="" /></span>
 							<p>Retoque digital en Photoshop.</p>
 						</div>
 					</div>
