--- a/Bitácora.html
+++ b/Bitácora.html
@@ -99,21 +99,21 @@
 							<p>En la sesión 18, Nos dedicamos de lleno al proyecto Sensidoll, tenemos que hacerlo realidad.</p>
 							<span class="image main"><img src="grupo.jpg" alt="" /></span>
 							<p>En la sesión 19, Presentamos avances y siguiendo el consejo del profesor, retocamos un poco el diseño</p>
-							<span class="image main"><img src="expo.png" alt="" /></span>
-							<p>En la sesión 20, Planificamos mejor el código y los circuitos a usar paa poder hacer realidad a nuestro Sensidoll.</p>
-							<span class="image main"><img src="expo.png" alt="" /></span>
+							<span class="image main"><img src="onshapex.png" alt="" /></span>
+							<p>En la sesión 20, Planificamos mejor el código y los circuitos a usar para poder hacer realidad a nuestro Sensidoll.</p>
+							<span class="image main"><img src="equipexxx.jpg" alt="" /></span>
 							<p>En la sesión 21, Nos pusimos a actualizar la página del proyecto grupal con todas las actualizaciones y por menores de Sensidoll</p>
-							<span class="image main"><img src="expo.png" alt="" /></span>
+							<span class="image main"><img src="pagina-web.jpg" alt="" /></span>
 							<p>En la sesión 22, Acordamos mejor el diseño y realizamos últimos cambios, sobre medidas y forma</p>
-							<span class="image main"><img src="expo.png" alt="" /></span>
+							<span class="image main"><img src="sensidollmedida.png" alt="" /></span>
 							<p>En la sesión 23, Aprendimos sobre escaneo 3D, incluso yo escaneé mi gorra</p>
-							<span class="image main"><img src="expo.png" alt="" /></span>
+							<span class="image main"><img src="kiriii.jpeg" alt="" /></span>
 							<p>En la sesión 24, Seguimos profundizando sobre el escaneo 3D en la clase.</p>
-							<span class="image main"><img src="expo.png" alt="" /></span>
+							<span class="image main"><img src="escaner3d.webp" alt="" /></span>
 							<p>En la sesión 25, Llegamos a avanzar, desarrollamos el circuito con ayuda del profesor, terminamos la página web grupal y dejamos a un 70% las fichas del proyecto.</p>
-							<span class="image main"><img src="expo.png" alt="" /></span>
+							<span class="image main"><img src="codigoarduino.png" alt="" /></span>
 							<p>En la sesión 26, Presentaremos nuestra página web personal y seguiremos con el desarrollo del muñeco a distancia</p>
-							<span class="image main"><img src="expo.png" alt="" /></span>
+							<span class="image main"><img src="web.png" alt="" /></span>
 							<p>En la sesión 27, Será el gran día, el mundo concerá a SENSIDOLL, presentación final de nuestro proyecto...</p>
 							<span class="image main"><img src="sensidollex.png" alt="" /></span>
 						</div>
