--- a/sobremi.html
+++ b/sobremi.html
@@ -51,7 +51,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Sobre mi</h1>
-							<span class="image main"><img src="yomini.png" alt="" /></span>
+							<span class="image main"><img src="yofotex.png" alt="" /></span>
 							<p>Hola, mi nombre es Renzo y alumno del curso Laboratorio de Innovación 2 .</p>
 							<p>SOBRE MÍ
 							<p>¡Hola! Soy Renzo La Serna y tengo 20 años. Actualmente estoy curso el séptimo ciclo de la carrera Dirección y Diseño Gráfico en la escuela superior Toulouse Lautrec. Actualmente me desempeño como ingeniero de empaques en una empresa de la industria gráfica que se dedica a los embalajes de papel y cartón.</p>
